--- a/app/src/main/res/layout/content_tela_principal.xml
+++ b/app/src/main/res/layout/content_tela_principal.xml
@@ -14,6 +14,7 @@
         android:id="@+id/listatelainicial"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="clicarrecycler"
         android:visibility="visible">
 
     </android.support.v7.widget.RecyclerView>
