acrescentado login com facebook e persistencia do login

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,19 +33,18 @@
         android:textSize="24sp"
         android:typeface="serif" />
 
-    <Button
-        android:id="@+id/button"
+    <com.facebook.login.widget.LoginButton
+        android:text="Continue com facebook"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="40dp"
+        android:id="@+id/btnLogincomfacebook"
         android:layout_weight="1"
-        android:background="@color/colorPrimaryDark"
-        android:onClick="loginwithfacebook"
-        android:text="Entre com Facebook"
-        android:textColor="#fff" />
+        android:textColor="@android:color/white"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
